# builder-05-no-fair-dice

./: .gitignore  README.md
dogfood/: Cargo.toml  build.rs
dogfood/examples/: report.rs
dogfood/report/: close-empty-table.md  fingerprint.txt  grind-caught.md  index.md  losing-roll.md  refund.md  switched-preimage.md  winning-roll.md
dogfood/src/: lib.rs
dogfood/tests/: gambling.rs
programs/quasar-dice/: Cargo.toml
programs/quasar-dice/src/: constants.rs  error.rs  introspection.rs  lib.rs  state.rs
programs/quasar-dice/src/instructions/: close_table.rs  initialize.rs  mod.rs  open_table.rs  place_bet.rs  refund_bet.rs  resolve_bet.rs  reveal.rs
