[package]
name = "quasar-dice-dogfood"
version = "0.1.0"
edition = "2021"
publish = false

# Drives the Quasar dice game (programs/quasar-dice) through the testsvm-quasar
# engine, reading the program's ELF from ../programs/quasar-dice. Instructions
# are hand-built from their flat layouts. Its own lockfile (testsvm-quasar
# carries the full Agave internals).

[lib]
path = "src/lib.rs"

[dependencies]
testsvm = { git = "https://github.com/cds-rs/anchor-litesvm", branch = "turbin3" }
solana-pubkey = "3.0"
solana-instruction = "3.2"

[dev-dependencies]
testsvm-quasar = { git = "https://github.com/cds-rs/anchor-litesvm", branch = "turbin3" }
solana-keypair = "3.1"
solana-signer = "3.0"
sha2 = "0.10"
